--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mk-sdk",
-  "version": "2.0.18",
+  "version": "2.0.19",
   "description": "sdk",
   "main": "lib/index.js",
   "scripts": {
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/ziaochina/mk-sdk#readme",
   "dependencies": {
+    "@babel/core": "^7.0.0",
     "mk-app-loader": "*",
     "mk-component": "*",
     "mk-meta-engine": "*",
@@ -35,7 +36,7 @@
   "devDependencies": {
     "babel-cli": "*",
     "babel-core": "*",
-    "babel-loader": "*",
+    "babel-loader": "^7.1.5",
     "babel-plugin-add-module-exports": "*",
     "babel-plugin-import": "*",
     "babel-plugin-transform-runtime": "*",
@@ -46,6 +47,7 @@
     "cross-env": "*",
     "css-loader": "*",
     "express": "*",
+    "extract-text-webpack-plugin": "*",
     "file-loader": "*",
     "less-loader": "*",
     "lodash-webpack-plugin": "*",
@@ -55,7 +57,6 @@
     "uglifyjs-webpack-plugin": "*",
     "url-loader": "*",
     "webpack": "*",
-    "webpack-bundle-analyzer": "*",
     "webpack-cli": "*"
   }
 }
